fixed skills section on mobile 2

--- a/p5/style.css
+++ b/p5/style.css
@@ -726,8 +726,14 @@ img.contact:hover {
     grid-template-columns: repeat(2, 1fr);
 
   }
+
   .row {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  img.slide, img.slide-dark {
+    height: 200px;
+    width: 400px;
   }
 }
 
@@ -786,8 +792,8 @@ img.contact:hover {
   }
 
   img.slide, img.slide-dark {
-    height: 75px;
-    width: 130px;
+    height: 100px;
+    width: 173px;
   }
 
   .skills-companies {
